--- a/src/pages/Newtab/Newtab.css
+++ b/src/pages/Newtab/Newtab.css
@@ -14,12 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: #ffffff;
+  min-height: 40vh;
   font-size: calc(10px + 2vmin);
   color: white;
 }
